--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 /cmake-build-debug/
+/cmake-build-debug-visual-studio/
 /cmake-build-release/
 /libs/OpenCLWindow/cmake-build-debug/
 /libs/OpenCLWindow/cmake-build-release/
 /build/
 /.gradle/
-/libglad.a
-/libglfw3.a
-/libOpenCLWindow.a
-/libOpenCLWindowJava.jnilib
 *.log
+*.mdmp
+/*.lib
+/*.a
+/*.jnilib
